--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
                 <input type="text" name="display" readonly>
             </form>
         </div>
-        <div class="item" id="clean">C</div>
+        <div class="item clean" id="clean">C</div>
         <div class="item back">&larr;</div>
-        <div class="item">+</div>
-        <div class="item">-</div>
-        <div class="item">&times;</div>
-        <div class="item">&divide;</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
-        <div class="item">9</div>
-        <div class="item">(</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-        <div class="item">)</div>
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item" id="equal">=</div>
-        <div class="item" id="zero">0</div>
-        <div class="item">.</div>
+        <div class="item symbol">+</div>
+        <div class="item symbol">-</div>
+        <div class="item symbol">*</div>
+        <div class="item symbol">/</div>
+        <div class="item symbol">7</div>
+        <div class="item symbol">8</div>
+        <div class="item symbol">9</div>
+        <div class="item symbol">(</div>
+        <div class="item symbol">4</div>
+        <div class="item symbol">5</div>
+        <div class="item symbol">6</div>
+        <div class="item symbol">)</div>
+        <div class="item symbol">1</div>
+        <div class="item symbol">2</div>
+        <div class="item symbol">3</div>
+        <div class="equal" id="equal">=</div>
+        <div class="item symbol zero">0</div>
+        <div class="item symbol">.</div>
     </div>
     <script src="js/script.js"></script>
 </body>
